# mcp-orchestrator

./: .gitignore  INSTALL.md  LICENSE  README.md  demo.py  pyproject.toml  setup.py
config/: credentials.json.example  registry.json  registry.json.example
docs/: ARCHITECTURE.md  IMPLEMENTATION.md
examples/: usage.py
mcp_orchestrator/: __init__.py  __main__.py  connection.py  orchestrator.py  server.py
