[project]
name = "mcp-orchestrator"
version = "0.1.0"
description = "Universal MCP Orchestrator - One interface for all MCP servers"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Jordan Ehrig", email = "jordanehrig@example.com"}
]
license = {text = "MIT"}
keywords = ["mcp", "orchestrator", "ai", "tools", "router"]

dependencies = [
    "mcp>=0.8.0",
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
    "asyncio>=3.4.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-orchestrator = "mcp_orchestrator:main"

[tool.hatch.build]
include = [
    "mcp_orchestrator/**/*.py",
    "config/*.json",
    "README.md",
    "LICENSE"
]
